--- a/src/Components/ViewPort/ViewPort.module.css
+++ b/src/Components/ViewPort/ViewPort.module.css
@@ -1,8 +1,9 @@
 .ViewPort {
-    width: 100%;
     height: 180px;
     font: inherit;
     font-size: 80px;
     border-bottom: 1px solid #ccc;
     padding: 50px 20px 0;
+    text-align: right;
+    overflow: scroll;
 }
